<resources>
    <string name="app_name">Nekoo</string>
    <string name="welcome_back">Mừng quay trở lại!</string>
    <string name="login_to_continue">Đăng nhập để tiếp tục</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="sign_up_account">Đăng ký tài khoản</string>
    <string name="pick_image">Chọn ảnh</string>
    <string name="full_name">Họ và Tên</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="sign_up">Đăng ký</string>
    <string name="dont_have_an_account">Chưa có tài khoản?</string>
    <string name="already_have_an_account">Đã có tài khoản?</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="input_message">Nhập tin nhắn</string>
    <string name="nickname">Nickname</string>
    <string name="required_field">*Trường bắt buộc</string>
    <string name="rooms">Đoạn chat</string>
    <string name="settings">Cài đặt</string>
    <string name="sign_out">Đăng xuất</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
    <string name="friends">Bạn bè</string>
    <string name="search">Tìm kiếm</string>
    <string name="add_friend">Thêm bạn</string>
    <string name="input_chat">Nhập tin nhắn...</string>
    <string name="offline">Không có kết nối internet</string>
    <string name="copy">Sao chép</string>
    <string name="delete_msg">Xóa tin nhắn</string>
    <string name="resend">Gửi lại</string>
    <string name="friend_request_received">Lời mời kết bạn</string>
</resources>