<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="@dimen/_6sdp">

    <LinearLayout
        android:id="@+id/layoutCopy"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_6sdp"
        app:layout_constraintEnd_toStartOf="@id/layoutResend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_copy"
            app:tint="@color/icon_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/copy"
            android:textColor="@color/primary"
            android:textSize="@dimen/_10sdp"
            tools:ignore="TextSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutResend"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:padding="@dimen/_6sdp"
        app:layout_constraintEnd_toStartOf="@id/layoutDelete"
        app:layout_constraintStart_toEndOf="@id/layoutCopy"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_resend"
            app:tint="@color/icon_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/resend"
            android:textColor="@color/primary"
            android:textSize="@dimen/_10sdp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDelete"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_6sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/layoutResend"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_delete"
            app:tint="@color/icon_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/delete_msg"
            android:textColor="@color/primary"
            android:textSize="@dimen/_10sdp"
            tools:ignore="TextSizeCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>